--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <!-- <button type="button" class="btn btn-info" data-dismiss="modal" id="metamaskWallet">Metamask</button>-->
+                <button type="button" class="btn btn-info btn-block" data-dismiss="modal" id="metamaskWallet"><img src="./assets/images/metamask.svg"></button>
                 <button type="button" class="btn btn-info btn-block" data-dismiss="modal" id="keplrWallet"><img src="./assets/images/keplr.svg"></button>
                 <button type="button" class="btn btn-info btn-block" data-dismiss="modal" id="leapWallet"><img src="./assets/images/leap.svg"></button>
             </div>
